added ides and organized read.me links

--- a/personal-in/site/me.html
+++ b/personal-in/site/me.html
@@ -12,21 +12,22 @@
 <body>
     <header class="dft-header">
         <div>
-            <p>Eros Karsburg</p>
+            <p>[Logo: EK]</p>
         </div>
         <div class="hdr-content">
-            <p>About me</p>
-            <p>Projects</p>
-            <p>Contact</p>
+            <a href="">About me</a>
+            <a href="">Projects</a>
+            <a href="">Contact</a>
         </div>
     </header>
-    <div class="main-body">
-        <div>
+    <main class="main-body">
+        <section>
             <div>
-
+                <div></div>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
+    
 </body>
 
 </html>
